--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Practice</title>
+    <title>Kanye West Quote Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Dad Jokes</h1>
+
+    <h1>Kanye West Quote Generator</h1>
     
-        <button>Click here for joke</button>
-        <img>
+        <img src="./kanye2.webp">
 
-    <p id="placeForJoke"></p>
+            <p id="placeForQuote"></p>
 
+
+                <button>Click here for Quote</button>
 
 
     <script src="app.js"></script>
